fix: normalize paragraph spacing in post content
Kramdown wraps some list items in <p> tags (loose lists) but not others,
causing uneven vertical rhythm. Add .Post-content CSS rules to normalize
spacing across all list items and improve section heading separation.

--- a/assets/css/_post.scss
+++ b/assets/css/_post.scss
@@ -24,4 +24,24 @@
       }
     }
   }
+
+  &-content {
+    li > p {
+      margin-bottom: 0;
+    }
+
+    > ul > li {
+      margin-bottom: 0.75rem;
+    }
+
+    ul ul {
+      margin-top: 0.25rem;
+      margin-bottom: 0;
+      padding-left: 2ch;
+    }
+
+    h2 {
+      margin-top: 2rem;
+    }
+  }
 }
